# fnayi

./: .env.example  .gitignore  FileTranslator.spec  README.md  installer.iss  pyproject.toml  启动.bat
docs/: 发布教程.md
docs/superpowers/plans/: 2026-05-30-batch-file-toolbox.md
docs/superpowers/specs/: 2026-05-30-batch-file-toolbox-design.md
scripts/: build_exe.ps1  build_installer.ps1
src/batch_file_toolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/file_toolbox/: __init__.py  config.py  gui.py  languages.py  main.py  reporting.py  settings.json  settings.py  translator.py  updater.py
src/file_toolbox/processors/: __init__.py  excel.py  organizer.py  pdf.py  txt.py  word.py
tests/: conftest.py  test_config.py  test_excel_processor.py  test_gui.py  test_organizer.py  test_pdf_processor.py  test_reporting.py  test_settings.py  test_translator.py  test_word_processor.py
