[project]
name = "batch-file-toolbox"
version = "1.3.3"
description = "Windows desktop toolbox for translating and organizing office files."
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "python-docx>=1.2.0",
  "openpyxl>=3.1.0",
  "pypdf>=4.0.0",
  "PySide6>=6.7.0", "pywin32>=300", "olefile>=0.47",
  "deep-translator>=1.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "fpdf2>=2.8.0",
  "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
